# example

./: .gitmodules  local.properties
ANDROMEDA/ios/Lotusfl/: flutter_native_splash.yaml
ANDROMEDA/ios/lotus/ltsarc/ltsarc/: ActionButton.swift  ActionButtonItem.swift  AppDelegate.swift  ContactUs.swift  Info.plist  MainController.swift  MainTabController.swift  PriceVController.swift  QrScanController.swift  ResultViewController.swift  SceneDelegate.swift  Service.swift  TabContr.swift  cam.json  naviBar.swift
ANDROMEDA/ios/lotus/ltsarc/ltsarc.xcodeproj/: project.pbxproj
ANDROMEDA/ios/lotus/ltsarc/ltsarc/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ANDROMEDA/ios/lotus/ltsarc/ltsarc/cntdata/: Harga.swift  HttpRequestHelper.swift  TableViewCellPromo.swift  dpLastUpdate.swift  dpProduk.swift  dtPromo.swift
ANDROMEDA/ios/lotus/ltsarc/ltsarc/en.lproj/: Main.strings
ANDROMEDA/ios/lotus/ltsarc/ltsarc/helpers/: PrettyJSONHelper.swift
ANDROMEDA/ios/lotus/ltsarc/ltsarc/main/: ContactCn.swift  PromoCn.swift  splash.swift
ANDROMEDA/ios/lotus/objtrial/objecttrial/objecttrial/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift
ANDROMEDA/ios/lotus/objtrial/objecttrial/objecttrial.xcodeproj/: project.pbxproj
ANDROMEDA/ios/lotus/scanner/Assets.xcassets/AppIcon.appiconset/: Contents.json
ANDROMEDA/ios/lotus/scanner/Assets.xcassets/iconeyemo.imageset/: Contents.json
ANDROMEDA/ios/lotus/scanner/Assets.xcassets/iconfinder_ic_account_child_48px_352001.imageset/: Contents.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml
gradle/wrapper/: gradle-wrapper.properties
hslScanner/: settings.gradle
hslScanner/app/: build.gradle
hslScanner/app/src/main/: AndroidManifest.xml
hslScanner/app/src/main/assets/: color_qr.json
hslScanner/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
hslScanner/app/src/main/cpp/camera/: Parameters.java
hslScanner/openCVLibrary341/: build.gradle
lotus/: settings.gradle
lotus/app/: build.gradle
lotus/app/src/main/: AndroidManifest.xml
lotus/gradle/wrapper/: gradle-wrapper.properties
zhasisipan/: settings.gradle
zhasisipan/app/: build.gradle
zhasisipan/app/src/main/: AndroidManifest.xml
zhasisipan/gradle/wrapper/: gradle-wrapper.properties
(+515 files in other folders)
